components/ua/users-v2/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v2
spec:
  template:
    spec:
      volumes:
        - name: liquibase-config
          configMap:
            name: users-db-updater-config
      containers:
        - name: user-office-web-service
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:e9b0fc49a066fdb3b50c39a6039f91a2881e33e74b1456eb897bbc18973af68d
          ports:
            - containerPort: 7005
