components/ua/users-v2/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v2
spec:
  template:
    spec:
      volumes:
        - name: liquibase-config
          configMap:
            name: users-db-updater-config
      containers:
        - name: user-office-web-service
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:62108a9c02d8f97990a34f48aa4c31dfbc9864088abe21a4cb53314fb230ed94
          ports:
            - containerPort: 7005
