components/ua/users-v2/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-office-web-service-rest-v2
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  hostnames:
  - "*.facilities.rl.ac.uk"
  - "*.developers.facilities.rl.ac.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users-service/v2
    backendRefs:
    - name: user-office-web-service-rest-v2
      port: 8080
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
